# mutants

./: .gitignore  Makefile  README.md  __main__.py  agents.md  pyproject.toml  requirements-dev.txt
content/: __init__.py
drivers/: __init__.py  cli.py
engine/: __init__.py  rng.py
references/logs/: castlightningboltspell  clonespell
tests/: test_cli_demo.py  test_parse_logs.py  test_rules.py
tools/: __init__.py  parse_logs.py
